fix modal z-index

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 2;
+	z-index: 3;
 	display: none;
 }
 
@@ -32,7 +32,7 @@ body {
 	display: none;
 	font-size: 25px;
 	position: fixed;
-	z-index: 3;
+	z-index: 4;
 	padding: 20px;
 	background: white;
 	color: black;
@@ -59,11 +59,14 @@ body {
 	font-family: LCD_Solid;
 }
 .modal h3 {
-	margin: 5px 0 0;
+	margin: 5px 5px 0;
+	position: absolute;
 }
 .modal span {
+	font-size: 23px;
 	position: absolute;
-	margin-left: 325px;
-	margin-top: -15px;
+	right: 0px;
+	top: 0px;
+	padding: 7px;
 	cursor: pointer;
 }
